<resources>
    <string name="app_name">LiftLab</string>
    <string name="BMI_CALCULATOR">BMI CALCULATOR</string>
    <string name="workout_selection_button">WORKOUT SELECTION</string>
    <string name="workout_maker_button">WORKOUT MAKER</string>
    <string name="bmi_data_button">YOUR IMB DATA</string>
    <string name="target_weight_button">SET YOUR TARGET</string>
    <string name="tips_button">FOOD &amp; WORKOUT TIPS</string>
    <string name="home_button">HOME</string>
    <string name="graph_button">GRAPH</string>
    <string name="further_button">DLC</string>
    <string name="lift_lab_button">LIFT LAB</string>
    <string name="workout">Workout</string>
    <string name="data_text">DATA</string>
    <string name="tools_text">TOOLS</string>
    <string name="slogan_image_description">Slogan image description</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="weight_text">Weight</string>
    <string name="insert_text">insert</string>
    <string name="kg_text">Kg</string>
    <string name="age_text">Age</string>
    <string name="height_text">Height</string>
    <string name="initial_170">170</string>
    <string name="cm_text">cm</string>
    <string name="calculate_your_bmi">Calculate your BMI</string>
    <string name="plus_icon_descr">plus icon</string>
    <string name="minus_icon_descr">minus_icon</string>
    <string name="bmi_text">BMI</string>
    <string name="result_icon">result_icon</string>
    <string name="bmi_score">22</string>
    <string name="gender">Gender</string>
    <string name="your_bmi_category_is">Your BMI Category Is</string>
    <string name="recalculate_your_bmi">RECALCULATE YOUR BMI</string>
    <string name="_0">0</string>
    <string name="_40">40</string>
    <string name="select_which_workout_plan_you_want_to_do">Select which workout plan you want to do</string>
    <string name="bulk_text">Bulk</string>
    <string name="maintenance_text">Maintenance</string>
    <string name="cut_text">Cut</string>
    <string name="suggestion_text">suggestion text</string>
    <string name="calculate_workout">Calculate Workout</string>
    <string name="target_weight_uppercase">TARGET WEIGHT</string>
    <string name="target_weight_lowercase">Target Weight</string>
    <string name="aim_text">Enter the weight you aim to achieve, and let our app guide you towards success.</string>
    <string name="set_target_text">Here you can set your ideal weight target and track your transformation journey.</string>
    <string name="welcom_target_text">Welcome to our weight goal feature:</string>
    <string name="start_journey_text">Your journey to a healthier and stronger version of yourself starts here!</string>
    <string name="scale_image_descr">scale_image_descr</string>
    <string name="bmi_logo_descr">bmi_logo_descr</string>
    <string name="workout_selection">WORKOUT SELECTION</string>
    <string name="workout_sel_logo_descr">workout sel logo descr</string>
    <string name="number_of_ex">Number of ex</string>
    <string name="duration_of_workout">Duration of workout</string>
    <string name="day_of_workout">Day of workout</string>
    <string name="type_of_workout">Type of workout</string>
    <string name="_2_day_week_plan">2 Day / Week Plan</string>
    <string name="_4_day_week_plan">4 Day / Week Plan</string>
    <string name="_6_day_week_plan">6 Day / Week Plan</string>
    <string name="go_to_workout">GO TO WORKOUT</string>
    <string name="text_setsxreps">Sets x Reps</string>
    <string name="recovery_time">Recovery time</string>
    <string name="title_exercise">Title exercise</string>
    <string name="exercise_picture_descr">Exercise_picture_descr</string>
    <string name="muscle_gain">Muscle gain</string>
    <string name="food_and_workout_tips">FOOD &amp; WORKOUT TIPS</string>
    <string name="food_tips_descr_1">Unlock Your Fitness Journey: Tailored Tips for Cutting, Maintaining, and Bulking Up!</string>
    <string name="severe_thinness">Severe Thinness</string>
    <string name="moderate_thinness">Moderate Thinness</string>
    <string name="mild_thinness">Mild Thinness</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese_class_i">Obese Class I</string>
    <string name="obese_class_ii">Obese Class II</string>
    <string name="obese_class_iii">Obese Class III</string>
    <string name="i_suggest_you_to_bulk">I suggest you to bulk</string>
    <string name="i_suggest_you_to_maintain">I suggest you to maintain</string>
    <string name="i_suggest_you_to_cut">I suggest you to cut</string>
    <string name="tips">Tip of the day</string>
    <string name="image_tips_descr">image_tips_descr</string>
</resources>