<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black_bg">

    <!-- Title -->
    <TextView
        android:id="@+id/title_Excercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_exercise"
        android:textSize="30sp"
        android:textColor="@color/light_blue"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <!-- Image exercise -->
    <ImageView
        android:id="@+id/imageView_Excercise"
        android:layout_width="103dp"
        android:layout_height="104dp"
        android:layout_below="@id/title_Excercise"
        android:layout_alignParentStart="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/exercise_picture_descr"/>

    <!-- Text 1 for the Set x Rep to do -->
    <TextView
        android:id="@+id/rep_Excercise"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_toEndOf="@id/imageView_Excercise"
        android:layout_below="@id/title_Excercise"
        android:text="@string/text_setsxreps"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"/>


    <!-- Text 2 for the rest time between each sets -->
    <TextView
        android:id="@+id/recovery_t_Excercise"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_toEndOf="@id/imageView_Excercise"
        android:layout_below="@id/imageView_Excercise"
        android:layout_marginTop="-66dp"
        android:text="@string/recovery_time"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"/>

    <!-- Text 3 for the Kg to use in the exercise -->
    <TextView
        android:id="@+id/weight_Excercise"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_toEndOf="@id/imageView_Excercise"
        android:layout_below="@id/imageView_Excercise"
        android:layout_marginTop="-33dp"
        android:text="@string/kg_text"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"/>

    <!-- little space between each exercises -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/imageView_Excercise"
        android:layout_marginTop="2dp"
        android:background="@color/black"/>

</RelativeLayout>
