<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black_bg"
    tools:context=".MainActivity">


    <!--SLOGAN-->
    <RelativeLayout
        android:id="@+id/liftlab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/cardbackground">

        <ImageView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/slogan"
            android:contentDescription="@string/slogan_image_description"/>

    </RelativeLayout>

    <!--TOOLS-->
    <RelativeLayout
        android:id="@+id/tools_layout"
        android:layout_above="@id/data_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/cardbackground">

        <TextView
            android:id="@+id/tools_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tools_text"
            android:layout_marginStart="20dp"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="@font/raleway"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/tools_text"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:onClick="openBMICalculator"
            android:text="@string/BMI_CALCULATOR"
            android:textSize="20sp"
            app:cornerRadius="10dp"
            app:backgroundTint="@color/lift_lab_blue"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/button4"
            android:layout_marginTop="10dp"
            android:text="@string/workout_selection_button"
            android:textSize="20sp"
            android:onClick="openWorkoutSelectionPage"
            app:cornerRadius="10dp"
            app:backgroundTint="@color/lift_lab_blue"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <!--DATA-->
    <RelativeLayout
        android:id="@+id/data_layout"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cardbackground">

        <TextView
            android:id="@+id/data_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_text"
            android:layout_marginStart="20dp"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="@font/raleway"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/data_text"
            android:layout_marginTop="10dp"
            android:text="@string/bmi_data_button"
            android:textSize="20sp"
            android:onClick="openPreviousBMIData"
            app:cornerRadius="10dp"
            app:backgroundTint="@color/lift_lab_blue"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/button7"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/graph_button"
            android:textSize="20sp"
            android:onClick="openGraph"
            app:cornerRadius="10dp"
            app:backgroundTint="@color/lift_lab_blue"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_below="@id/button2"
            android:layout_marginTop="10dp"
            android:text="@string/tips_button"
            android:textSize="20sp"
            app:cornerRadius="10dp"
            app:backgroundTint="@color/lift_lab_blue"
            android:onClick="openFoodWorkoutTips"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/button2"
            android:layout_marginTop="10dp"
            android:text="@string/target_weight_button"
            android:textSize="20sp"
            android:onClick="openSetTargetActivity"
            app:cornerRadius="10dp"
            app:backgroundTint="@color/lift_lab_blue"
            android:textColor="@color/white"/>

    </RelativeLayout>

</RelativeLayout>