<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_bg"
    tools:context=".Workout">

    <!--Title-->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textSize="60sp"
        android:text="@string/workout"
        android:background="@drawable/cardbackground"
        android:textColor="@color/lift_lab_blue"
        android:gravity="center" />

    <!--Creating vertical line-->
    <RelativeLayout
        android:id="@+id/center_vertical_line"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"/>

    <!--Workout attributes1-->
    <RelativeLayout
        android:id="@+id/workout_attributes1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginTop="5dp"
        android:background="@drawable/cardbackground"
        android:layout_toStartOf="@id/center_vertical_line"
        android:layout_alignParentStart="true">

        <!--Bulk or cut or maint-->
        <TextView
            android:id="@+id/type_of_workout_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_of_workout"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:layout_alignParentStart="true"
            android:gravity="center"/>

        <!--day of the workout-->
        <TextView
            android:id="@+id/day_of_workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/type_of_workout_text"
            android:text="@string/day_of_workout"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:layout_alignParentStart="true"
            android:gravity="center"/>


    </RelativeLayout>

    <!--Workout attributes2-->
    <RelativeLayout
        android:id="@+id/workout_attributes2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginTop="5dp"
        android:background="@drawable/cardbackground"
        android:layout_toEndOf="@id/center_vertical_line"
        android:layout_alignParentEnd="true">

        <!--Workout duration-->
        <TextView
            android:id="@+id/workout_duration_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duration_of_workout"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:gravity="center"/>

        <!--Number of exercises-->
        <TextView
            android:id="@+id/number_of_exercises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/workout_duration_text"
            android:text="@string/number_of_ex"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:layout_alignParentStart="true"
            android:gravity="center"/>
    </RelativeLayout>

    <!--Recylce view-->
    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@id/workout_attributes1"
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cardbackground"
        android:layout_marginTop="5dp"/>







</RelativeLayout>